# 2_salles_2_ambiances

./: CMakeLists.txt  README.md  Renderer.cpp  main.cpp
glimac/glimac/: Sphere.hpp
src/: App.cpp  Box.cpp  CMakeLists.txt  Cone.cpp  Geometry.cpp  Renderer.cpp  Room.cpp  Skybox.cpp  Sphere.cpp  main.cpp
src/include/: App.hpp  Box.hpp  Camera.hpp  Cone.hpp  Cube.hpp  Cylinder.hpp  FirstRoom.hpp  Geometry.hpp  Quad.hpp  Renderer.hpp  Ring.hpp  Room.h  Room.hpp  Scene.hpp  Shape.hpp  Skybox.hpp  Sphere.hpp  Tore.hpp  Tube.hpp  Utils.hpp
src/shaders/: 3D.vs.glsl  directionallight.fs.glsl  pointlight.fs.glsl  second_room.fs.glsl  skybox.fs.glsl  skybox.vs.glsl
